# LGE

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  build.sh  imgui.ini
NewFolder/: NewFolder.lumameta.lumameta
assets/: .gitkeep  .gitkeep.lumameta  Cache.lumameta  DaySkyHDRI057B_1K.lumameta  EXR Sky.lumameta  HDR Sky.lumameta  NewFolder.lumameta  NewMaterial.material  NewMaterial.material.lumameta  NewMaterial_1.material.lumameta  NewMaterial_2.material.lumameta  NewScene.scene  NewScene.scene.lumameta  NewShader.shader  NewShader.shader.lumameta  Test.material  Test.material.lumameta  Test.shader  Test.shader.lumameta  icons.lumameta  shaders.lumameta
assets/DaySkyHDRI057B_1K/: DaySkyHDRI057B.png.lumameta  DaySkyHDRI057B_1K.blend  DaySkyHDRI057B_1K.blend.lumameta  DaySkyHDRI057B_1K.tres  DaySkyHDRI057B_1K.tres.lumameta  DaySkyHDRI057B_1K.usdc  DaySkyHDRI057B_1K.usdc.lumameta  DaySkyHDRI057B_1K_HDR.exr.lumameta  DaySkyHDRI057B_1K_TONEMAPPED.jpg.lumameta
assets/EXR Sky/: kloofendal_48d_partly_cloudy_puresky_1k.exr.lumameta  kloofendal_48d_partly_cloudy_puresky_4k.exr.lumameta
assets/HDR Sky/: citrus_orchard_road_puresky_1k.hdr.lumameta
assets/NewFolder/: NewFolder.lumameta  NewFolder.lumameta.lumameta
assets/icons/: EditorViewport.RotateMode.png.lumameta  EditorViewport.ScaleMode.png.lumameta  EditorViewport.TranslateMode.png.lumameta  Icons  Icons.lumameta  README.md  README.md.lumameta
assets/shaders/: Basic.frag  Basic.frag.lumameta  Basic.vert  Basic.vert.lumameta  Gizmo.frag.lumameta  Gizmo.vert  Gizmo.vert.lumameta  GridMaterial.frag  GridMaterial.frag.lumameta  GridMaterial.vert  GridMaterial.vert.lumameta  PBR.frag  PBR.frag.lumameta  PBR.vert  PBR.vert.lumameta  Skybox.frag  Skybox.frag.lumameta  Skybox.vert  Skybox.vert.lumameta
docs/: Doxyfile  fs-principles.md  mainpage.md
docs/output/html/: Analytics_8cpp.html  Analytics_8cpp.js  Analytics_8cpp__incl.map  Analytics_8cpp__incl.md5  Analytics_8cpp_source.html  Analytics_8h.html  Analytics_8h.js  Analytics_8h__dep__incl.map  Analytics_8h__dep__incl.md5  Analytics_8h__incl.map  Analytics_8h__incl.md5  Analytics_8h_source.html  Application_8cpp.html  Application_8cpp__incl.map  Application_8cpp__incl.md5  Application_8cpp_source.html  Application_8h.html  Application_8h.js  Application_8h__dep__incl.map  Application_8h__dep__incl.md5  Application_8h__incl.map  Application_8h__incl.md5  Application_8h_source.html  AssetFactory_8cpp.html  AssetFactory_8cpp__incl.map  AssetFactory_8cpp__incl.md5  AssetFactory_8cpp_source.html  AssetFactory_8h.html  AssetFactory_8h.js  AssetFactory_8h__dep__incl.map  AssetFactory_8h__dep__incl.md5  AssetFactory_8h__incl.map  AssetFactory_8h__incl.md5  AssetFactory_8h_source.html  AssetManager_8cpp.html  AssetManager_8cpp__incl.map  AssetManager_8cpp__incl.md5  AssetManager_8cpp_source.html  AssetManager_8h.html  AssetManager_8h.js  (+3435 more)
include/LGE/assets/: AssetFactory.h  AssetManager.h  AssetMeta.h  AssetMetadata.h  Exporter.h  ExporterRegistry.h  FileSystemWatcher.h  Importer.h  ImporterRegistry.h  TextureExporter.h  TextureImporter.h  ThumbnailGenerator.h
include/LGE/core/: Application.h  Component.h  FileSystem.h  GameObject.h  Input.h  Log.h  MaterialComponent.h  Window.h
include/LGE/fs/: Project.h
include/LGE/math/: Matrix.h  (+1 more)
scripts/: copy_unreal_icons.ps1
src/: main.cpp
src/assets/: AssetFactory.cpp  AssetManager.cpp  AssetMeta.cpp  AssetMetadata.cpp  ExporterRegistry.cpp  FileSystemWatcher.cpp  ImporterRegistry.cpp  TextureExporter.cpp  TextureImporter.cpp  ThumbnailGenerator.cpp
src/core/: Application.cpp  Component.cpp  FileSystem.cpp  GameObject.cpp  Input.cpp  Log.cpp  MaterialComponent.cpp  Window.cpp
src/math/: Matrix.cpp
src/rendering/: Camera.cpp  CameraController.cpp  DirectionalLight.cpp  Framebuffer.cpp  Material.cpp  MaterialInstance.cpp  Renderer.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
src/ui/: ContentBrowser.cpp  Details.cpp  Hierarchy.cpp  Inspector.cpp  MainMenuBar.cpp  ProjectBrowser.cpp  SceneViewport.cpp  SplashScreen.cpp  Toolbar.cpp  UI.cpp  UITheme.cpp
(+195 files in other folders)
